Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -252,7 +252,8 @@
 \author{
         \textbf{Ronny Ko} \thanks{\large \textit{\text{Acknowledgments}:}\\  
         \textbf{Robin Geelen} (KU Leuven)\\  
-        \textbf{Tianjian Yang} (Peking University)\\ \textbf{Yongwoo Lee} (Inha University)}
+        \textbf{Tianjian Yang} (Peking University)\\ \textbf{Yongwoo Lee} (Inha University) \\ \textbf{Nolan Carouge} (Grenoble INP)
+        }
         \\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
 \date{}
 
