A05: remove cj = cj + q (mod q) A06: \limits and \dfrac to consistency with later chapters.

--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -17,7 +17,7 @@ A polynomial ring ${\mathbb{Z}_q[x] / (x^n + 1)}$ is the set of all polynomials 
 For a polynomial $f \in \mathbb{Z}_q[x] / (x^n + 1)$ where $f = c_0 + c_1x^1 + \gap{$\cdots$} + c_{n-1}x^{n-1}$:
 
 \begin{itemize}
-\item \textbf{Coefficient Ring:} each coefficient $c_j \in \mathbb{Z}_q$ (i.e., $c_j \equiv c_j+q \pmod{q}$).
+\item \textbf{Coefficient Ring:} each coefficient $c_j \in \mathbb{Z}_q$.
 
 $ $
 
