--- a/a06-decomp.tex
+++ b/a06-decomp.tex
@@ -57,12 +57,14 @@ Given $f\in \mathbb{Z}_q[x]/(x^n+1)$, fix $\beta\ge 2$ and $\ell\ge 1$ with $\be
 
 $ $
 
-$f=\sum_{i=1}^{\ell} f_i\,\frac{q}{\beta^i}, \qquad f_i\in \mathbb{Z}_q[x]/(x^n+1)  $
+$
+f=\sum\limits_{i=1}^{\ell} f_i\,\dfrac{q}{\beta^i}, \qquad f_i\in \mathbb{Z}_q[x]/(x^n+1)
+$
 
 $ $
 
-where each $f_i$ is obtained by decomposing every coefficient of $f$ in base $\beta$. If $f=\sum_j c_j x^j$ with $c_j\in\mathbb{Z}_q$, then
-$c_j=\sum_{i=1}^{\ell} c_{j,i}\, \frac{q}{\beta^i}$ with $c_{j,i}\in\{0,\ldots,\beta-1\}$,
+where each $f_i$ is obtained by decomposing every coefficient of $f$ in base $\beta$. If $f=\sum\limits_j c_j x^j$ with $c_j\in\mathbb{Z}_q$, then
+$c_j=\sum\limits_{i=1}^{\ell} c_{j,i}\,\dfrac{q}{\beta^i}$ with $c_{j,i}\in\{0,\ldots,\beta-1\}$,
 and $f_i=\sum_j c_{j,i} x^j$.
 We denote the decomposition of the polynomial $f$ into the base $\beta$ with the level $\ell$ as follows:
 
