--- a/00-main.tex
+++ b/00-main.tex
@@ -252,7 +252,7 @@
 \author{
         \textbf{Ronny Ko} \thanks{\large \textit{\text{Acknowledgments}:}\\  
         \textbf{Robin Geelen} (KU Leuven)\\  
-        \textbf{Tianjian Yang} (Peking University)\\ \textbf{Yongwoo Lee} (Inha University) \\ \textbf{Nolan Carouge} (Grenoble INP)
+        \textbf{Tianjian Yang} (Peking University)\\ \textbf{Yongwoo Lee} (Inha University) \\ \textbf{Nolan Carouge} (Grenoble INP Ensimag)
         }
         \\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
 \date{}
@@ -302,7 +302,7 @@ Please report any bugs or suggestions regarding the draft to the \href{https://g
 
 
 \subsubsection*{Acknowledgments}
-Special thanks go to the following researchers: Robin Geelen (KU Leuven, \href{mailto:robin.geelen@esat.kuleuven.be}{robin.geelen@esat.kuleuven.be}), for his thoughtful and dedicated feedback; Tianjian Yang (Peking University, \href{mailto:robin.geelen@esat.kuleuven.be}{2300012738@stu.pku.edu.cn}), for correcting numerous typos and other errors in the draft; and Yongwoo Lee (Inha University, \href{mailto:yongwoo@inha.ac.kr}{yongwoo@inha.ac.kr}), for his general advice.
+Special thanks go to the following researchers: Robin Geelen (KU Leuven, \href{mailto:robin.geelen@esat.kuleuven.be}{robin.geelen@esat.kuleuven.be}), for his thoughtful and dedicated feedback; Yongwoo Lee (Inha University, \href{mailto:yongwoo@inha.ac.kr}{yongwoo@inha.ac.kr}), for his general advice; Tianjian Yang (Peking University, \href{mailto:robin.geelen@esat.kuleuven.be}{2300012738@stu.pku.edu.cn}), for correcting numerous typos and other errors in the draft; and Nolan Carouge (Grenoble INP Ensimag, \href{mailto:nolan.carouge.pro@gmail.com}); for further strengthening the theoretical representation of the draft.
 
 \thispagestyle{empty}
 
